<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/match_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_recipes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:padding="20dp">


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_creator"
            style="@style/img_creator"
            app:layout_constraintEnd_toStartOf="@+id/tv_creator_name"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_creator_name"
            style="@style/creator_name"
            android:text="@string/dummy_name_creator"

            app:layout_constraintBottom_toBottomOf="@+id/img_creator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/img_creator"
            app:layout_constraintTop_toTopOf="@+id/img_creator" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_food"
            style="@style/img_food"
            android:layout_width="match_parent"
            android:layout_height="@dimen/food_img_size"



            app:layout_constraintTop_toBottomOf="@+id/img_creator"
            tools:layout_editor_absoluteX="20dp" />


        <TextView
            android:id="@+id/tv_food_name"
            style="@style/title_text"
            android:text="@string/dummy_name_food"
            app:layout_constraintBottom_toTopOf="@+id/tv_story"
            app:layout_constraintEnd_toStartOf="@+id/img_fav"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_food" />

        <ImageView
            android:id="@+id/img_fav"
            style="@style/ic_heart_size_medium"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_favorite_false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_food_name"
            app:layout_constraintTop_toBottomOf="@+id/img_food" />


        <TextView
            android:id="@+id/tv_story"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:lines="4"
            android:text="@string/dummy_story"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_food_name"
            tools:layout_editor_absoluteX="20dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
